Prevent overflow scrolling

--- a/src/components/Buttons/Buttons.module.css
+++ b/src/components/Buttons/Buttons.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  padding: 8px;
+  margin: 4px;
 }
 
 .row {
